--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -37,12 +37,12 @@ Responsibilities: Data
 
 '''
 
-=== Johnny Roe
-image::m133225.jpg[width="150", align="left"]
-{empty}[http://github.com/m133225[github]] [<<johndoe#, portfolio>>]
+=== Lu Han
+image::luhan02.jpg[width="150", align="left"]
+{empty}[https://github.com/luhan02[github]] [<<johndoe#, portfolio>>]
 
 Role: Developer +
-Responsibilities: Dev Ops + Threading
+Responsibilities:
 
 '''
 
