--- a/docs/team/ian.adoc
+++ b/docs/team/ian.adoc
@@ -1,11 +1,11 @@
-= Adrian Tan - Project Portfolio
+= Ian Tjahjono - Project Portfolio
 :site-section: AboutUs
 :imagesDir: ../images
 :stylesDir: ../stylesheets
 
-== Role: Team Lead, Developer, Git Expert
+== Role: Developer
 
-Responsibilities: Devops, Integration, Scheduling and tracking
+Responsibilities: Developing, testing, events
 
 == PROJECT: Student Planner
 
@@ -17,35 +17,12 @@ Student Planner is a all-in-one desktop manager application that allows students
 
 == Summary of contributions
 
-* *Major enhancement*: added *the ability to backup/restore user data*
-** What it does: allows the user to backup current user data both online and locally. Backups can be restored by using the restore command.
-** Justification: This feature improves the product significantly because a user may have the app on many desktops and this provides a convenient way to synchronise them among many devices.
-** Highlights: This enhancement enables a generic class that can be easily extended by developers to support more types of online backup services in future. It requires an in-depth analysis of design alternatives.
-The implementation too was challenging as the backing up of data online may take a long time, existing implementation will cause the application to freeze until any backup is completed.
-The current implementation exhibits a working knowledge of multithreading applications, concurrency as well as event driven programming.
-** Credits: GitHub Api by kohsuke.
+* *Major enhancement*: Added *Events management*
+** What it does: Allows the user to manage their events. 
+** Justification: This feature allows the user to keep track of new and existing events. Being a student with a busy schedule, he/she may not be able to keep track of all of his/her events, hence this feature will 
+help them access their event schedule with just a few commands.
 
-* *Minor enhancement*: added a user preferences command that allows the user to customise their application preferences such as default backup locations, online backup data location and other application settings.
-
-* *Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] _{give links to collated code files}_
-
-* *Other contributions*:
-
-** Project management:
-*** Managed all releases on GitHub
-*** Setup and modified most of the initial documentation prior to v1.1
-** Enhancements to existing features:
-*** Wrote additional tests for existing features (Pull requests https://github.com[#36], https://github.com[#38])
-** Documentation:
-*** Did cosmetic tweaks to existing contents of the User Guide
-** Community:
-*** PRs reviewed (with non-trivial review comments): https://github.com/CS2113-AY1819S1-T13-1/main/pull/42[1], https://github.com/CS2113-AY1819S1-T13-1/main/pull/72[2]
-*** Contributed to forum discussions (examples:  https://github.com/nusCS2113-AY1819S1/forum/issues/30[1], https://github.com/nusCS2113-AY1819S1/forum/issues/4[2], https://github.com/nusCS2113-AY1819S1/forum/issues/27[3], https://github.com/nusCS2113-AY1819S1/forum/issues/16[4] , https://github.com/nusCS2113-AY1819S1/forum/issues?q=commenter%3AQzSG[full list])
-*** Reported bugs and suggestions for other teams in the class (examples:  https://github.com/nusCS2113-AY1819S1/forum/issues/4[1], https://github.com/nusCS2113-AY1819S1/forum/issues/27[2])
-** Tools:
-*** Integrated a third party library (Github Api by kohsuke) to the project (https://github.com/kohsuke/github-api)
-*** Integrated a new Github App (Travis.com) to the team repo
-**** This is different from other teams still using the old deprecated OAuth Flow used on the older Travis.org domain
+* *Code contributed*: [https://nuscs2113-ay1819s1.github.io/dashboard/#=undefined&search=ian-tjahjono[Overview]]
 
 == Contributions to the User Guide
 
@@ -54,9 +31,7 @@ The current implementation exhibits a working knowledge of multithreading applic
 |_Given below are sections I contributed to the User Guide. They showcase my ability to write documentation targeting end-users._
 |===
 
-include::../UserGuide.adoc[tag=databackup]
-
-include::../UserGuide.adoc[tag=datarestore]
+include::../UserGuide.adoc[tag=events]
 
 == Contributions to the Developer Guide
 
@@ -64,6 +39,4 @@ include::../UserGuide.adoc[tag=datarestore]
 |_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
 
-include::../DeveloperGuide.adoc[tag=backuprestore]
-
-include::../DeveloperGuide.adoc[tag=dataencryption]
+include::../DeveloperGuide.adoc[tag=events]
